fix code block spacing

--- a/src/styles/prismjs/theme.css
+++ b/src/styles/prismjs/theme.css
@@ -273,7 +273,7 @@ code[class*='language-html'] {
  */
 .gatsby-highlight {
   padding: 1em;
-  margin: 0.5em 0;
+  margin: 1em 0;
   overflow: auto;
   background: #1e1e1e;
   border-radius: 0.3em;
